*Version 4.5.2*
* Add system settings for events export configuration
* Allow audit events when saving object without changes

*Version 4.5.1*
* Improve performance for new points by setting the point value cache to an empty collection
* Fixed a bug where system setting for db version would not get created/updated if it didn't exist before.
* Fix published points as disabled when importing a legacy publisher, defaults legacy points to enabled now.
* Upgrade commons-fileupload library version to 1.5 (mitigates CVE-2023-24998)
* Fix to allow users to see comments for active alarms in real-time

*Version 4.5.0*
* Add new rollup type Range (in period)

*Version 4.4.4*
* Fix point values purge when data source and data point purge setting overrides disabled
* Avoid loading all points into memory while purging

*Version 4.4.3*
* Fix bug where An event acknowledgement by a nor admin user returns an ACCESS_DENIED error response even when the event was acknowledged successfully.

*Version 4.4.2*
* Fix bug where failed TSL migration tasks not retried for checked exceptions
* Revert bugfix from 4.4.1 for not using snapshot of event handlers, Only disabled and deleted event handlers affects already active events

*Version 4.4.1*
* Fix bug where adding comments not updating active events
* Fix bug where events are using snapshot of event handlers when it is raised (Ex: Removing inactive email event handler now prevents sending email when already active events are inactive)
* EventManager is now a spring bean

*Version 4.4.0*
* Drop support for IMAGE data points
* Delete all data points with IMAGE dataType
* Delete all data sources of type HTTP_IMAGE
* Point values for IMAGE data points will be deleted by the nightly purge, however the images themselves should be manually deleted from your "filedata" directory
* Update rql-parser to v1.0.x, stricter parsing of RQL
* Add support for PostgreSQL
* Update postgresql driver to v42.4.2