@@ -2169,6 +2169,7 @@ validate.permission.null=Permission cannot be null
 validate.permission.cantAddRole=Cannot add/remove role {0}. You must hold a role to add or remove it.
 validate.permission.cantAddRoleSuperadminOnly=Cannot add/remove role {0}. You must have the superadmin role.
 validate.role.invalidModification=Cannot save with a role you do not have. You have: {0}
+validate.role.invalidRemoval=Cannot remove roles you do not have. You have: {0}
 validate.role.modifyOwnRoles=Cannot modify your own roles
 validate.role.noSpaceAllowed=Spaces are not allowed
 validate.role.cannotChangeXid=Cannot change role XID
